--- a/典型90/memo/三角関数.md
+++ b/典型90/memo/三角関数.md
@@ -1,7 +1,32 @@
 ## Tips
+- `atan(c)`
+  - `cos(Θ)`から`Θ`を求める。`cos(Θ)`は`斜辺 / 高さ`
 - `atan2(y, x)`
   - ベクトルの偏角を求める便利関数
 - `M_PI`
   - ラジアンの180°
+- **用いる値は最初から`double`型にしておく**
+  - 思わぬところで誤差がでる
+    - ```cpp
+      #include <iostream>
+      #include <iomanip>
+      int main(void){
+          int A = 5;
+          double B = 5;
+          double C = 1.5;
+          std::cout << std::fixed << std::setprecision(9) << A / 2 * C << std::endl;
+          std::cout << std::fixed << std::setprecision(9) << B / 2 * C << std::endl;
+      }
+      // 出力：
+      // > 3.000000000
+      // > 3.750000000
+      ```
 ## 英語
-- 偏角＝deflaction
+- 偏角 ＝ <複素数> argument of complex
+  - [複素数の偏角](https://ja.wikipedia.org/wiki/%E8%A4%87%E7%B4%A0%E6%95%B0%E3%81%AE%E5%81%8F%E8%A7%92)
+  - 「複素数`z`の偏角は`arg z`で表す」
+- 俯角 = angle of depression
+- [三角比と三角関数の英語表現](https://www.optics-words.com/english_for_science/trigonometric_function.html)
+  - 斜辺 = Hypotenuse
+  - 底辺 = Adjacent
+  - 高さ = Opposite
